--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,9 @@ repository = "https://github.com/NERVEbing/grep-rust/"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+opt-level = 3
