--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 authors = ["NERVEbing <lc91926@gmail.com>"]
 homepage = "https://lvlv.fun/"
 repository = "https://github.com/NERVEbing/grep-rust/"
+license = "Apache License 2.0"
+description = "Like grep, but use rust."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
